<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PhotoPrint</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btnLogin">Login</string>
    <string name="pwd">Password</string>
    <string name="un">Username</string>
    <string name="uploadMsg">Please choose images to print</string>
    <string name="app_id">232382423552157</string>
    <string name="application_id">232382423552157</string>
    <string name="albumMsg">Please select one of your albums</string>
    <string-array name="menu_array">
        <item>MyGallery</item>
        <item>Facebook</item>
        <item>Profile</item>
        <item>Order History</item>
        <item>Cart</item>
        <item>Logout</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="btnSelect">Add to Cart</string>
    <string name="cart">Cart</string>
    <string name="add_more">Add More</string>
    <string name="desc_list_item_icon">Icons</string>
    
	<string-array name="sizes">
	    <item>3.25 x 4.5</item>
	    <item>3.5 x 5</item>
	    <item>3.5 x 8.1</item>
	    <item>3.9 x 5.8</item>
	    <item>4.7 x 9.3</item>
	    <item>5.8 x 7.9</item>
	    <item>4 x 6</item>
	</string-array>
	
	<array name="menu_icons">
        <item>@drawable/ic_action_select_all</item>	<!-- My Gallery -->
        <item>@drawable/facebook_icon</item>		<!-- Facebook -->
        <item>@drawable/ic_action_user</item>		<!-- User -->
        <item>@drawable/ic_action_new</item>		<!-- Order History	 -->
        <item>@drawable/cart</item>					<!-- Cart -->
        <item>@drawable/ic_action_new</item>		<!-- Logout -->
    </array>
    
    <string name="invoice">Invoice: </string>
	<string name="date">Date: </string>
	<string name="imgQty">No of Images: </string>
	<string name="price">Price: </string>
	<string name="viewImg">View Images: </string>  
	<string name="imgDesc">Photo print Images</string>
	<string name="sizeHere">Sizes Here</string>
	
	<string name="one">1</string>
	<string name="size">Size: </string>
	<string name="piece">Piece/s</string>
	<string name="name">Name</string>
	<string name="username">Username</string>
	<string name="contact_num">Contact Number</string>
	
	<string name="email">Email</string>
	<string name="country">Country</string>
	<string name="state">State</string>
	<string name="city">City</string>
	<string name="myself">Myself</string>
	<string name="qty">Qty: </string>
	<string name="register">Register</string>
	<string name="deleteAll">Delete All</string>
	<string name="camera">Camera</string>
	<string name="fullName">Full Name</string>
	<string name="submit">Submit</string>
	
	<string name="size1">3.25 x 4.5</string>
	<string name="size2">3.5 x 8.1</string>
	<string name="size3">3.9 x 5.8</string>
	<string name="size4">4.7 x 9.3</string>
	<string name="size5">5.8 x 7.9</string>
	<string name="size6">4 x 6</string>
	
	<string name="price1">5</string>
	<string name="price2">10</string>
	<string name="price3">15</string>
	<string name="price4">20</string>
	<string name="price5">25</string>
	<string name="price6">30</string>
	
	<string name="priceTag">Price</string>
</resources>
