<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="5dip"
        android:padding="3dip" >

        <ImageView
            android:id="@+id/list_image"
            android:layout_width="100dip"
            android:layout_height="100dp"
            android:layout_weight="20"
            android:layout_margin="10dp"
            android:contentDescription="@string/imgDesc"
            android:src="@drawable/image_for_empty_url" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="32dp"
        android:layout_toRightOf="@+id/thumbnail"
        android:text="@string/size" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/thumbnail"
        android:layout_alignLeft="@+id/tvQty"
        android:layout_marginBottom="19dp"
        android:text="@string/price" />

    <TextView
        android:id="@+id/tvQty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvSize"
        android:layout_below="@+id/tvSize"
        android:layout_marginTop="26dp"
        android:text="@string/qty" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvQty"
        android:layout_alignBottom="@+id/tvQty"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/tvPrice"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvPrice"
        android:layout_alignBottom="@+id/tvPrice"
        android:layout_alignLeft="@+id/editText1"
        android:layout_alignParentRight="true"
        android:ems="10" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" />

</RelativeLayout>
