<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/name"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/etName"
            android:layout_alignBottom="@+id/etName"
            android:layout_alignParentLeft="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/name" />
        
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/username"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/etUsername"
            android:layout_alignBottom="@+id/etUsername"
            android:layout_alignParentLeft="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/username" />
        
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/etEmail"
            android:layout_alignBottom="@+id/etEmail"
            android:layout_alignParentLeft="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/email" />
        
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/contact_num"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tvContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/etContact"
            android:layout_alignBottom="@+id/etContact"
            android:layout_alignParentLeft="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/contact_num" />
        
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/country"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tvCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/etCountry"
            android:layout_alignBottom="@+id/etCountry"
            android:layout_alignParentLeft="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/country" />
        
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/state"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tvState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/etState"
            android:layout_alignBottom="@+id/etState"
            android:layout_alignParentLeft="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/state" />
        
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/city"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tvCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/etCity"
            android:layout_alignBottom="@+id/etCity"
            android:layout_alignParentLeft="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/city" />
        
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView 
            android:id="@+id/svMyself"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:scrollbars="vertical"
            >
        </ScrollView>

        <EditText
            android:id="@+id/etMyself"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/myself"
            android:maxLines="5"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:scrollbars="vertical" />

        <TextView
            android:id="@+id/tvMyself"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/etMyself"
            android:layout_alignBottom="@+id/etMyself"
            android:layout_alignParentLeft="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/myself" />
        
    </RelativeLayout>

</LinearLayout>
